# jobscout

./: .env.example  .gitignore  CLAUDE.md  JobScout_SPEC.md  README.md  STATUS.md  blocklist.yaml  compliance.yaml  docker-compose.yml  env.example  pyproject.toml  sources.discovered.yaml  sources.yaml
backend/jobscout/: backup.py  config.py  embed.py  enrich.py  models.py  normalize.py  relational.py  resume.py  scheduler.py  search.py  skills.py  sponsors.py  store.py  verdict.py
backend/jobscout/adapters/: __init__.py  adzuna.py  arbeitnow.py  ashby.py  base.py  greenhouse.py  himalayas.py  jobicy.py  jobrightai.py  jobspy_adapter.py  lever.py  recruitee.py  remoteok.py  remotive.py  rippling.py  rss.py  smartrecruiters.py  themuse.py  workable.py  workday.py  workingnomads.py
backend/jobscout/api/: main.py
backend/jobscout/services/: __init__.py  ingestion_service.py  query_service.py  registry.py  source_config.py
backend/tests/: conftest.py  test_adapters.py  test_api_smoke.py  test_build_filters.py  test_company_registry.py  test_dedup.py  test_dedupe_reposts.py  test_discovered_merge.py  test_discovery_junior.py  test_enrich_fields.py  test_ingest_quota.py  test_keyword_match.py  test_new_adapters.py  test_normalize.py  test_registry_capexempt.py  test_resume.py  test_routes_registered.py  test_skills.py  test_smoke_entry_level.py  test_source_priority.py  test_sponsors.py  test_store_connect.py  test_us_filter.py  test_verdict.py  test_weaviate_backup.py  test_workday_probe.py
data/: cap_exempt_seeds.txt  company_seeds.txt  company_tiers.csv  discovered_companies.csv  everify_employers.txt  h1b_sponsors.txt  workday_cap_exempt_seeds.txt  workday_hardware_seeds.txt
docs/: api.md  architecture.md  configuration.md  data-and-storage.md  sources.md  user-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  ProfileContext.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AddToWatchlistModal.tsx  CompaniesPanel.tsx  FilterBar.tsx  JobCard.tsx  JobDetailPane.tsx  JobList.tsx  MyJobsPanel.tsx  PipelineView.tsx  ProfilePanel.tsx  ProfilesPanel.tsx  ResumeMatchPanel.tsx  SavedSearchesPanel.tsx  SearchBar.tsx  SponsorshipBadge.tsx  StatePanel.tsx  TopNav.tsx
scripts/: backfill_categories.py  backfill_employment_type.py  backfill_lever_descriptions.py  build_company_registry.py  discover_companies.py  export_weaviate.py  health.sh  import_weaviate.py  ingest_discovered.py  probe_workday.py  purge_workday_unnamed.py  restamp_sponsors.py  run.sh  smoke_adapters.py  stop.sh  sync_cap_exempt_registry.py
